изменил тесты ClientServiceTest, изменил get(0) на getFirst()